<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    tools:context=".activity.RegisterDriverActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="@dimen/margin_32dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageViewBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_arrow_back_24dp"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:letterSpacing="0.04"
                    android:text="@string/title_register"
                    android:textAppearance="@style/H2Text"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:textAppearance="@style/Subtitle3Text"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/text_information_driver" />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:ems="10"
                    android:hint="@string/text_name_user"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:ems="10"
                    android:hint="@string/text_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:ems="10"
                    android:hint="@string/text_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:ems="10"
                    android:hint="@string/text_confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:textAppearance="@style/Subtitle3Text"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/text_information_vehicle" />

                <EditText
                    android:id="@+id/editTextVehicleBrand"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_24dp"
                    android:ems="10"
                    android:hint="@string/text_vehicle_brand"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextVehiclePlate"
                    style="@style/EditTextNight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:ems="10"
                    android:hint="@string/text_vehicle_plate"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="50"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/buttonRegister"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:text="@string/button_register" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>