<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageViewHome"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_uberclone_home" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditTextNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:ems="10"
        android:hint="@string/text_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHome"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextNight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:ems="10"
        android:hint="@string/text_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonLogin"
        style="@style/ButtonGreen"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <TextView
        android:id="@+id/textViewforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Body2Text"
        android:textColor="@color/white_opt54"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/text_forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAppearance="@style/Body2Text"
            android:textColor="@color/white_opt54"
            android:text="@string/text_not_account" />

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_8dp"
            android:layout_weight="0"
            android:textAppearance="@style/Body2Text"
            android:textColor="@color/green_500_opt87"
            android:text="@string/text_go_register" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>